intTests/test_optional_args/args003.log.good
Loading file "args003.saw"
Type errors:
  args003.saw:7:6-7:29: Error: Mismatched named parameters.
    Missing from Int -> a?Int -> Int:
       b : Int
    Missing from Int -> b?Int -> Int:
       a : Int
    Expected: Int -> a?Int -> Int
    Found:    Int -> b?Int -> Int

  args003.saw:7:56-7:57: Note: The type Int -> a?Int -> Int arises from the context of the term
  args003.saw:7:10-7:29: Note: The type Int -> b?Int -> Int arises from this type annotation


FAILED
